--- a/templates/predict/index.html
+++ b/templates/predict/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Credit Card Prediction</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2542402497279469"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
