ad sense update

--- a/templates/predict/index.html
+++ b/templates/predict/index.html
@@ -5,6 +5,7 @@
     <title>Credit Card Prediction</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2542402497279469"
      crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-2542402497279469">
 </head>
 <body>
 
